--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>main</title>
+    <link rel="stylesheet" href="style.css">
+    <style></style>
+    <title>Counter</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div>
+        <h1 id="title" class="tl">Counter</h1>
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
